Mejoras de login y logo de la app.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,6 +9,9 @@
               <h4>
                   Bienvenido,&nbsp;<%= current_user.firstname %> </h4>
               <% end %>
+              
+              <div style="text-align: center"><img src="captura 3.jpg" width="300" /></div>  
+
           <p class="lead text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
           Mauris pretium mollis sapien, id efficitur lorem. Integer viverra dignissim.</p>
           <p>
