Modulo de Noticias

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link disabled" href="#">Noticias</a>      
+      <%= link_to 'Noticias', posts_path, :class => 'text-white' %>     
       <a class="nav-item nav-link disabled" href="#">Universidad</a>
       <a class="nav-item nav-link disabled" href="#">Personas</a>
       <a class="nav-item nav-link" href="/contacts/new">Contáctenos</a>
